# tether-ddns

./: .coveragerc  .dockerignore  .flake8  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  mockup.html  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-13T00-52-44Z__frontend-src.md
docs/superpowers/plans/: 2026-07-10-cloudflare-provider.md  2026-07-10-log-duplication-fix.md  2026-07-10-remove-generic-ttl.md  2026-07-10-router-firewall-hook.md  2026-07-10-schemaform-enums-router-fields.md  2026-07-10-tether-ddns-dualstack.md  2026-07-10-tether-ddns-polish.md  2026-07-10-tether-ddns.md  2026-07-11-annotated-field-labels.md  2026-07-11-app-logs-stdout.md  2026-07-11-docker.md  2026-07-11-domain-status-consistency.md  2026-07-11-domain-update-hook-events.md  2026-07-11-error-reporting-standardization.md  2026-07-11-hook-run-now.md  2026-07-11-hook-supported-events.md  2026-07-11-log-autoscroll.md  2026-07-11-modal-descriptions.md  (+15 more)
frontend/: .gitignore  index.html  mockup-flat.html  mockup-left-rail.html  mockup-single-scroll.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: README.md  dashboard.spec.ts
frontend/src/: App.interval.test.tsx  App.runhook.test.tsx  App.test.tsx  App.tsx  api.test.ts  api.ts  buildinfo.d.ts  index.css  styles.css  types.test.ts  types.ts  useLiveState.test.tsx  useLiveState.ts  utils.test.ts  utils.ts
test/: test_flake8.py  test_mypy.py  test_pyright.py  test_ruff.py
test/unit/: test_api.py  test_cloudflare.py  test_collection.py  test_config.py  test_config_store.py  test_context.py  test_dispatch_service.py  test_duckdns.py  test_event_from_context.py  test_hook_registry.py  test_ip_sources.py  test_logging_setup.py  test_main.py  test_plugin_config.py  test_provider_registry.py  test_pushover.py  test_reachability.py  test_router_firewall_hook.py  test_runtime.py  test_scheduler.py  test_schema_fields.py  test_secret_masking.py  test_state_store.py  test_sync_service.py  test_ws.py
tether_ddns/: __init__.py  __main__.py  api.py  app.py  config.py  config_store.py  context.py  errors.py  logging_setup.py  plugin_config.py  reachability.py  runtime.py  scheduler.py  schema_fields.py  state_store.py  ws.py
tether_ddns/hooks/: __init__.py  base.py
tether_ddns/ip_sources/: __init__.py  base.py
tether_ddns/providers/: __init__.py  base.py
tether_ddns/services/: collection.py  dispatch.py  sync.py
(+81 files in other folders)
