[project]
name = "tether-ddns"
version = "0.0.1"
description = "Self-hosted dynamic DNS — keep your DNS records pointed at your changing public IP."
requires-python = ">=3.12"
dependencies = [
  "apscheduler",
  "fastapi",
  "pydantic",
  "aiodns",
  "aiohttp",
  "uvicorn",
  "websockets"
]

[dependency-groups]
dev = [
  "flake8",
  "flake8-blind-except",
  "flake8-builtins",
  "flake8-class-newline",
  "flake8-comprehensions",
  "flake8-deprecated",
  "flake8-docstrings",
  "flake8-import-order",
  "flake8-quotes",
  "mypy",
  "pep8-naming",
  "pyright",
  "pytest-cov",
  "pytest-asyncio",
  "httpx",
  "ruff"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
tether_ddns = ['py.typed']

[tool.setuptools.packages.find]
include = ["tether_ddns.*", "tether_ddns"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[project.scripts]
tether-ddns = "tether_ddns.__main__:main"
